@@ -1,5 +1,14 @@
 2018-01-20  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Solaris/SPARC.
+	* Makefile.devel (multibuild-solaris-sparc-cc,
+	multibuild-solaris-sparc-gcc): Enable all build variants that work or
+	should work.
+	* makemake.in (XCFLAGS): For Solaris/SPARC, enable all optimizations
+	except ASM.
+
+2018-01-20  Bruno Haible  <bruno@clisp.org>
+
 	Make gettext calls work with non-GNU gettext in Solaris 11 libc.
 	* makemake.in: After installing .mo files, on Solaris, create symbolic
 	links ll_CC.UTF-8 -> ll for all supported locales.
